Summary of important user-visible changes for netcdf 1.0.6:
-------------------------------------------------------------------

 ** ncread: do not replace _FillValue by NaNs for characters
 ** ncdisp: fix for attributes value with %-sign 

Summary of important user-visible changes for netcdf 1.0.5:
-------------------------------------------------------------------

 ** Implement DeflateLevel in nccreate

Summary of important user-visible changes for netcdf 1.0.4:
-------------------------------------------------------------------

 ** Work-around for problem in netcdf 4.1.3 for reading a unlimited
    variable of current size 0

Summary of important user-visible changes for netcdf 1.0.3:
-------------------------------------------------------------------

 ** remove NC_INDEPENDENT and NC_COLLECTIVE which are no longer defined
    in netcdf 4.3.1

Summary of important user-visible changes for netcdf 1.0.2:
-------------------------------------------------------------------

 ** Avoid obsolete isequalwithequalnans functions

Summary of important user-visible changes for netcdf 1.0.1:
-------------------------------------------------------------------

 ** Fix bug preventing compilation on 32-bit platforms.

Summary of important user-visible changes for netcdf 1.0.0:
-------------------------------------------------------------------

 ** Initial release