@@ -53,6 +53,8 @@ OCTAVE = @OCTAVE@
 OCTAVE_VERSION = @OCTAVE_VERSION@
 MKOCTFILE = @MKOCTFILE@ -DHAVE_OCTAVE_$(ver) -v
 SHLEXT = @SHLEXT@
+NC_CONFIG = @NC_CONFIG@
+OCTAVE_CONFIG = @OCTAVE_CONFIG@
 
 %.o: %.c ; $(MKOCTFILE) -c $<
 %.o: %.f ; $(MKOCTFILE) -c $<
